k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-clusterip
  namespace: spring-boot
spec:
  selector:
    app: spring-boot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
