k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
  namespace: spring-boot
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:051826731133:certificate/6c7ef852-bafe-41a8-9b53-ee95c508aedd"
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  rules:
    - host: server.hjh-olivecinema.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: back-clusterip
                port:
                  number: 80
#
